Bug 3692:Tick Cross icon not aligned with text and UI alignment fixes

--- a/ReckonMobileDevV04/resources/sass/app.scss
+++ b/ReckonMobileDevV04/resources/sass/app.scss
@@ -118,22 +118,15 @@ $include-list-highlights: none;
 
 // Android Textfield input color fix 
 .x-android .x-input-el {
-    -webkit-text-fill-color: $rm-default-color !important;
-
-    .rm-togglefield-off .x-field-input{                     
-        padding-top: 1em !important;            
-    }
-    .rm-togglefield-on .x-field-input{                     
-        padding-top: 1em !important;            
-    }
+    -webkit-text-fill-color: $rm-default-color !important;    
 }
 
-.x-android .rm-togglefield-off .x-input-el {
-  padding-top: 1.1em !important; 
+.x-android .rm-flatfield-disabled { 
+    .x-input-el {
+          padding-bottom: 0.7em !important; 
+    }
 }
-.x-android .rm-togglefield-on .x-input-el {
-  padding-top: 1.1em !important; 
-}
+
 
 //For TextFields with flat look and white bg color in label and field, also icon on right side using bg image
 @mixin rm_flatfield($img){	
@@ -1671,6 +1664,7 @@ rm-emailinvoicebackground{
         background-size: 18px;
         position: absolute;
         right: 10px;  
+        padding-top: 0.85em;    
         padding-bottom: 0.9em;      
     }
 }
@@ -1695,7 +1689,8 @@ rm-emailinvoicebackground{
         background-size: 14px;
         position: absolute;
         right: 10px;  
-        padding-bottom: 0.9em;      
+        padding-top: 0.85em;    
+        padding-bottom: 0.9em;        
     }
 }
 
